--- a/src/components/Header/sty.css
+++ b/src/components/Header/sty.css
@@ -19016,6 +19016,15 @@ span.counter {
     color: black;
     border: 2px solid black;
 }
+.button3 {
+    background-color:  lightgrey;
+    color: white;
+    border: 2px solid lightgrey;
+}
+.button3:hover {
+    background-color: lightgrey;
+
+    border: 2px solid lightgrey;}
 .button:hover {
     background-color: red;
 
@@ -19033,3 +19042,6 @@ span.counter {
 .img-fluid img{
     max-width:20%;
 }
+
+
+
